@@ -200,8 +200,8 @@ and AI_ivl' = AI
 and aval_ivl' = aval'
 proof qed (auto simp: iter'_pfp_above)
 
-value [code] "list_up(AI_ivl' test3_ivl Top)"
-value [code] "list_up(AI_ivl' test4_ivl Top)"
-value [code] "list_up(AI_ivl' test5_ivl Top)"
+value "list_up(AI_ivl' test3_ivl Top)"
+value "list_up(AI_ivl' test4_ivl Top)"
+value "list_up(AI_ivl' test5_ivl Top)"
 
 end
